Refactor API and repository structure for queue management
- Updated docker-compose.yml to comment out PostgreSQL service configuration.
- Added a new Postman collection for the Queue Manager API, detailing endpoints for health checks and queue retrieval by service name.
- Modified API routes to include repository dependency for queue management.
- Enhanced the repository layer with methods to retrieve queues and their assignments from the database.
- Implemented error handling for service name parameter in API requests.
- Updated main server and scheduler to utilize the repository for database interactions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,26 +11,26 @@ services:
     restart: unless-stopped
     command: ["/app/server"]
     depends_on:
-      postgres:
-        condition: service_healthy
+      # postgres:
+      #   condition: service_healthy
       rabbitmq:
         condition: service_healthy
 
-  postgres:
-    image: postgres:16
-    environment:
-      POSTGRES_USER: queue
-      POSTGRES_PASSWORD: queue
-      POSTGRES_DB: queue_manager
-    ports:
-      - "5433:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+  # postgres:
+  #   image: postgres:16
+  #   environment:
+  #     POSTGRES_USER: queue
+  #     POSTGRES_PASSWORD: queue
+  #     POSTGRES_DB: queue_manager
+  #   ports:
+  #     - "5433:5432"
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 10
+  #   volumes:
+  #     - pgdata:/var/lib/postgresql/data
 
   rabbitmq:
     image: rabbitmq:3.13-management
