Enhance queue management and reconciliation features
- Updated .env.example to simplify RabbitMQ HTTP URI configuration.
- Modified docker-compose.yml to include RabbitMQ HTTP URI as an environment variable.
- Refactored API routes to support a new synchronization endpoint for manual topology reconciliation.
- Implemented reconciliation logic to compare and synchronize expected and actual queue states.
- Enhanced the RabbitMQ provider with methods to list exchanges, queues, and bindings, as well as delete them.
- Updated server initialization to include the queue provider for improved functionality.

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ POSTGRES_URI=postgres://queue:queue@postgres:5432/queue_manager?sslmode=disable
 
 # RabbitMQ
 RABBITMQ_AMQP_URI=amqp://guest:guest@rabbitmq:5672/
-RABBITMQ_HTTP_URI=http://guest:guest@rabbitmq:15672/api
+RABBITMQ_HTTP_URI=http://rabbitmq:15672
 QUEUE_PROVIDER=RABBITMQ
